# prism

./: .clang-format  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Output-Debug.txt  Prism.sln  README.md  azure-pipelines.yml  cmake_install.cmake  compile_commands.json  default.nix  nix-cmake  sonar-project.properties
Prism.Engine/: CMakeLists.txt  Context.h  Game.cpp  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  Makefile  MenuState.cpp  MenuState.h  Prism.Engine.vcxproj  Prism.Engine.vcxproj.filters  State.cpp  State.h  Window.cpp  Window.h  cmake_install.cmake  cpp.hint  main.cpp
Prism.Engine/include/: AudioManager.h  AudioSystem.h  Context.h  CoreEngine.h  CoreRenderer.h  Game.h  InputManager.h  Key.h  MenuBuilder.h  MenuState.h  State.h  StateMachine.h  Surface.h  Window.h
Prism.Engine/include/ECS/: Component.h  Entity.h  EntityBuilder.h  EntityManager.h  EntityWithComponent.h  Listener.h  PositionComponent.h  RenderSystem.h  System.h  SystemManager.h
Prism.Engine/include/Math/: Vector2.h  Vector3.h  Vector3f.h
Prism.Engine/include/Menu/: Control.h  ControlBuilder.h  Menu.h  MenuBuilder.h  MenuRenderer.h  TextControl.h  TextRenderer.h
Prism.Engine/include/PathFinding/: LinearPathFindingStrategy.h  LinearPathfinding.h  PathFindingStrategy.h  Strategies.h
Prism.Engine/include/Physics/: AABBCollider.h  BoundingBox.h  PhysicsEngine.h  QuadTree.h
Prism.Engine/include/RenderAPI/: FragmentShader.h  IndexBuffer.h  OGLFragmentShader.h  OGLIndexBuffer.h  OGLPipeline.h  OGLRenderDevice.h  OGLVertexArrayObject.h  OGLVertexBuffer.h  OGLVertexShader.h  Pipeline.h  RenderDevice.h  VertexArrayObject.h  VertexBuffer.h  VertexShader.h
Prism.Engine/include/RenderFacade/: FragmentShader.h  IndexBuffer.h  OGLFragmentShader.h  OGLIndexBuffer.h  OGLPipeline.h  OGLRenderDevice.h  OGLVertexBuffer.h  OGLVertexShader.h  Pipeline.h  RenderDevice.h  VertexBuffer.h  VertexShader.h
Prism.Engine/include/Renderer/: Animation.h  Camera.h  CoreRenderer.h  DirectionalLight.h  ForwardRenderer.h  PointLight.h  Renderable.h  Scene.h  TestRenderer.h
Prism.Engine/include/Util/: AdvertisementSystem.h  DistanceUtil.h  FileReader.h  FileSystem.h
Prism.Engine/include/World/: AdditionalObjectProperties.h  EntityAssembler.h  JSONSerializer.h  LevelSerializer.h  ObjectProperties.h  WorldLoader.h  WorldObject.h
Prism.Engine/lib/: assimp-vc140-mtd.lib  glew32d.exp  glew32sd.lib
Prism.Engine/lib/src/: format.cpp
Prism.Engine/lib/x64/: Box2D.lib
Prism.Engine/src/: AudioManager.cpp  AudioSystem.cpp  Context.cpp  CoreEngine.cpp  Game.cpp  InputManager.cpp  MenuBuilder.cpp  MenuState.cpp  State.cpp  StateMachine.cpp  Surface.cpp  Window.cpp  main.cpp
Prism.Engine/src/ECS/: Entity.cpp  EntityManager.cpp  Listener.cpp  RenderSystem.cpp  System.cpp  SystemManager.cpp
Prism.Engine/src/Math/: Vector3f.cpp
Prism.Engine/src/Menu/: Control.cpp  ControlBuilder.cpp  Menu.cpp  MenuBuilder.cpp  MenuRenderer.cpp  TextControl.cpp  TextRenderer.cpp
Prism.Engine/src/OGLRenderAPI/: OGLFragmentShader.cpp  OGLIndexBuffer.cpp  OGLPipeline.cpp  OGLRenderDevice.cpp  OGLVertexArrayObject.cpp  OGLVertexBuffer.cpp  OGLVertexShader.cpp
Prism.Engine/src/PathFinding/: LinearPathFinding.cpp
Prism.Engine/src/Physics/: AABBCollider.cpp  BoundingBox.cpp  PhysicsEngine.cpp  QuadTree.cpp
Prism.Engine/src/RenderFacade/: OGLFragmentShader.cpp  OGLIndexBuffer.cpp  OGLPipeline.cpp  OGLRenderDevice.cpp  OGLVertexBuffer.cpp  OGLVertexShader.cpp  Pipeline.cpp  RenderDevice.cpp
Prism.Engine/src/Renderer/: Camera.cpp  CoreRenderer.cpp  ForwardRenderer.cpp  Renderable.cpp  TestRenderer.cpp
Prism.Engine/src/SDLFacade/: InputManager.cpp  Window.cpp
Prism.Engine/src/Util/: AdvertisementSystem.cpp  DistanceUtil.cpp  FileReader.cpp  FileSystem.cpp  lodepng.cpp
Prism.Engine/src/World/: AdditionalObjectProperties.cpp  EntityAssembler.cpp  JSONSerializer.cpp  ObjectProperties.cpp  WorldLoader.cpp  WorldObject.cpp
Prism.Game/: CMakeLists.txt  CMakeLists.txt.generated  GameOverSystem.cpp  Makefile  Prism.Game.vcxproj  Prism.Game.vcxproj.filters  PrismGame.cpp  PrismGame.h  Sample Save  cmake_install.cmake  main.cpp  ~AutoRecover.Prism.Game.vcxproj
Prism.Game/include/: EntityFactory.h  EntityRegister.h  PrismGame.h  Variables.h
Prism.Game/include/Enums/: BuildTypes.h  ResourceTypeEnum.h
Prism.Game/include/States/: CreditsState.h  EndState.h  HelpState.h  HighScoreState.h  LevelSelectionState.h  MainMenuState.h  PauseState.h  PrismGame.h  ResolutionMenuState.h  SaveMenuState.h  SaveSelectionState.h  SelectLevelState.h  TransitionState.h  WorldSelectionState.h
Prism.Game/include/World/: PrismEntityAssembler.h  TerrainGenerator.h
Prism.Game/res/: 1545228559.json  1545228637.json  1545228874.json  1545228955.json  1545229106.json  1545230801.json  1545231015.json  1545231103.json  1545231546.json  1545232001.json  1545232465.json  1545232670.json  1545232913.json  cliff_straight.mtl
Prism.Game/res/img/: EmptyButton.xcf
Prism.Game/res/levels/: Level_1.json  Level_2.json  Level_3.json  Sample World.1.json  Sample World.json  Sample World.tmx  Tiles.tsx  (+2 more)
Prism.Game/src/: EntityFactory.cpp  EntityRegister.cpp  PrismEntityAssembler.cpp  PrismGame.cpp  main.cpp
(+237 files in other folders)
